--- a/style.css
+++ b/style.css
@@ -12,8 +12,11 @@ h1{
 }
 
 .problem{
-  font-size:20px;
+  font-size:25px;
   padding: 10px;
   margin:5px;
   background-color: lightskyblue;
 }
+
+body{font-family:'Poor Story', serif;}
+body{font-size:20px;}
