--- a/style.css
+++ b/style.css
@@ -20,3 +20,29 @@ h1{
 
 body{font-family:'Poor Story', serif;}
 body{font-size:20px;}
+
+body, html {
+    height: 100%;
+}
+
+#hero_text{
+  background-color:inherit;
+}
+
+.hero-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img1.jpg");
+  height: 30%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
