--- a/style.css
+++ b/style.css
@@ -1,26 +1,34 @@
 h1{
   font-size: 50px;
-  text-align:center;
+  text-align: left;
   padding: 5px;
-  background-color: cornflowerblue;
+  margin-top: 5px;
+  color: black;
+  border-bottom: medium black double;
+  border-top: medium black double;
 }
 
 .addes{
+  display: block;
+  padding-bottom: 15px;
   color:white;
-  padding:20px;
-  background-color: dimgray;
+  background-color: #766161;
 }
 
 .problem{
   font-size:25px;
   padding: 10px;
   margin:5px;
-  background-color: lightskyblue;
+  background-color:#e1f1dd;
+  border: medium black double;
 }
 
 body{font-family:'Poor Story', serif;}
 body{font-size:20px;}
 
+body{
+  background-image:url('background.png');
+}
 body, html {
     height: 100%;
 }
@@ -46,3 +54,11 @@ body, html {
   transform: translate(-50%, -50%);
   color: white;
 }
+
+  .note_background{
+    background-image:url('note.png');
+  }
+
+  .link{
+    color:#87a7b3
+  }
