--- a/style.css
+++ b/style.css
@@ -1,11 +1,8 @@
 h1{
+  width=100%;
   font-size: 50px;
-  text-align: left;
   padding: 5px;
-  margin-top: 5px;
   color: black;
-  border-bottom: medium black double;
-  border-top: medium black double;
 }
 
 a{
@@ -52,14 +49,24 @@ body{font-family:'Poor Story', serif;
 }
 
 
-.button_and_title
-{
-  display:flex;
-  justify-content: space-around;
-}
-
-
 #hero_text{
   color: white;
   background-color:inherit;
+}
+
+.Nav
+{
+  background-color:#00000020;
+  display:flex;
+  align-items: center;
+  border-bottom: medium black double;
+  border-top: medium black double;
+
+}
+
+.navTitle
+{
+  width:100%;
+  margin:10;
+  text-align: center;
 }
