--- a/style.css
+++ b/style.css
@@ -61,7 +61,6 @@ body{font-family:'Poor Story', serif;
   align-items: center;
   border-bottom: medium black double;
   border-top: medium black double;
-
 }
 
 .navTitle
@@ -69,4 +68,13 @@ body{font-family:'Poor Story', serif;
   width:100%;
   margin:10;
   text-align: center;
+}
+
+.navImg
+{
+  width:45px;
+}
+.navImg:hover
+{
+  width:50px;
 }
