font, image size: px->%

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 h1{
-  width=100%;
-  font-size: 50px;
-  padding: 5px;
+  width:100%;
+  font-size:300%;
   color: black;
 }
 
@@ -10,7 +9,7 @@ a{
 }
 
 body{font-family:'Poor Story', serif;
-    font-size:20px;
+    font-size:130%;
     background-image:url('background.png');
     height:100vh;
     }
@@ -35,15 +34,15 @@ body{font-family:'Poor Story', serif;
 
 .page-footer{
   display: block;
-  padding-bottom: 5px;
+  padding-bottom:2%;
   color:white;
   background-color: #766161;
 }
 
 .problem{
-  font-size:25px;
-  padding: 10px;
-  margin:5px;
+  font-size:150%;
+  padding:3%;
+  margin:2%;
   background-color:#e1f1dd;
   border: medium black double;
 }
@@ -72,7 +71,7 @@ body{font-family:'Poor Story', serif;
 
 .navImg
 {
-  width:45px;
+  width:5%;
 }
 .navImg:hover
 {
