--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 h1{
   width:100%;
-  font-size:300%;
+  font-size:200%;
   color: black;
 }
 
@@ -76,4 +76,30 @@ body{font-family:'Poor Story', serif;
 .navImg:hover
 {
   width:6%;
+}
+
+@media(max-width:770px)
+{
+  h1{
+  font-size:150%;
+  }
+
+  .navImg
+  {
+    width:4%;
+  }
+  .navImg:hover
+  {
+    width:4.5%;
+  }
+
+  .navTitle
+  {
+    width:100%;
+    margin:3%;
+    font-size: 100%;
+    text-align: center;
+  }
+
+
 }
