--- a/style.css
+++ b/style.css
@@ -1,17 +1,113 @@
-.button{
-  font-size:20px;
-  color:black;
-  border: 5px solid green;
-  padding:4px;
-  margin:4px;
-  text-decoration:none;
-}
-
 h1{
-  font-size: 50px;
-  text-align:center;
+  width:100%;
+  font-size:200%;
+  color: black;
 }
 
-.addes{
-  color:gray;
+a{
+  color:#87a7b3
+}
+
+body{font-family:'Poor Story', serif;
+    font-size:130%;
+    background-image:url('background.png');
+    height:100vh;
+    }
+
+.button{
+  outline: none;
+  background-color:#766161 ;
+  color: white;
+  font-size: 100%;
+  margin:16px 0;
+  cursor:pointer;
+  border-radius: 10%;
+}
+
+.hero-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img1.jpg");
+  height: 30%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+
+.page-footer{
+  display: block;
+  padding-bottom:2%;
+  color:white;
+  background-color: #766161;
+}
+
+.problem{
+  font-size:150%;
+  padding:3%;
+  margin:2%;
+  background-color:#e1f1dd;
+  border: medium black double;
+}
+
+
+#hero_text{
+  color: white;
+  background-color:inherit;
+}
+
+.Nav
+{
+  background-color:#00000020;
+  display:flex;
+  align-items: center;
+  border-bottom: medium black double;
+  border-top: medium black double;
+}
+
+.navTitle
+{
+  width:100%;
+  margin:10;
+  text-align: center;
+}
+
+.navImg
+{
+  width:5%;
+}
+.navImg:hover
+{
+  opacity: 0.5;
+}
+
+@media(max-width:770px)
+{
+  h1{
+  font-size:150%;
+  }
+
+  .navImg
+  {
+    width:4%;
+  }
+  .navImg:hover
+  {
+    opacity:0.5;
+  }
+
+  .navTitle
+  {
+    width:100%;
+    margin:3%;
+    font-size: 100%;
+    text-align: center;
+  }
 }
